--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -298,5 +298,8 @@
   },
   "formulaFormatTitle": {
     "message": "Kopierformat auswählen"
+  },
+  "quoteReply": {
+    "message": "Nachfragen"
   }
 }
