--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -298,5 +298,8 @@
   },
   "formulaFormatTitle": {
     "message": "Select Copy Format"
+  },
+  "quoteReply": {
+    "message": "Follow Up"
   }
 }
