--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -298,5 +298,8 @@
   },
   "formulaFormatTitle": {
     "message": "Seleccionar formato de copia"
+  },
+  "quoteReply": {
+    "message": "Preguntar más"
   }
 }
