--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -298,5 +298,8 @@
   },
   "formulaFormatTitle": {
     "message": "Sélectionner le format de copie"
+  },
+  "quoteReply": {
+    "message": "Question de suivi"
   }
 }
