--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -298,5 +298,8 @@
   },
   "formulaFormatTitle": {
     "message": "Pilih Format Salin"
+  },
+  "quoteReply": {
+    "message": "Tanya Lanjutan"
   }
 }
