--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -298,6 +298,9 @@
   },
   "formulaFormatTitle": {
     "message": "Selecionar formato de cópia"
+  },
+  "quoteReply": {
+    "message": "Perguntar mais"
   }
 }
 
