--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -298,6 +298,9 @@
   },
   "formulaFormatTitle": {
     "message": "Выберите формат копирования"
+  },
+  "quoteReply": {
+    "message": "Уточнить"
   }
 }
 
