--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -298,6 +298,9 @@
   },
   "formulaFormatTitle": {
     "message": "Chọn định dạng sao chép"
+  },
+  "quoteReply": {
+    "message": "Hỏi thêm"
   }
 }
 
