--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -298,5 +298,8 @@
   },
   "formulaFormatTitle": {
     "message": "कॉपी प्रारूप चुनें"
+  },
+  "quoteReply": {
+    "message": "अनुवर्ती प्रश्न"
   }
 }
