--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -298,6 +298,9 @@
   },
   "formulaFormatTitle": {
     "message": "Wybierz format kopiowania"
+  },
+  "quoteReply": {
+    "message": "Dopytaj"
   }
 }
 
