--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -298,6 +298,9 @@
   },
   "formulaFormatTitle": {
     "message": "เลือกรูปแบบการคัดลอก"
+  },
+  "quoteReply": {
+    "message": "ถามต่อ"
   }
 }
 
