--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -165,7 +165,7 @@
     "message": "Chat Box"
   },
   "kvzmxp": {
-    "message": "Use Enter Key for New Line"
+    "message": "Enter Key for New Line"
   },
   "kpxvmz": {
     "message": "Copy Formula"
@@ -394,5 +394,11 @@
   },
   "quoteReplyHint": {
     "message": "After selecting text on the page, a follow-up button appears to quickly quote into the input box"
+  },
+  "scrollToBottomTitle": {
+    "message": "Scroll to Bottom"
+  },
+  "scrollToBottomHint": {
+    "message": "Show a quick button to scroll to the latest message"
   }
 }
