--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -171,7 +171,7 @@
     "message": "चैट बॉक्स"
   },
   "kvzmxp": {
-    "message": "नई लाइन के लिए Enter कुंजी का उपयोग करें"
+    "message": "Enter कुंजी से नई लाइन"
   },
   "kpxvmz": {
     "message": "फ़ॉर्मूला कॉपी करें"
@@ -319,5 +319,11 @@
   },
   "quoteReply": {
     "message": "अनुवर्ती प्रश्न"
+  },
+  "scrollToBottomTitle": {
+    "message": "नीचे जाएं"
+  },
+  "scrollToBottomHint": {
+    "message": "नवीनतम संदेश पर जाने के लिए त्वरित बटन दिखाएं"
   }
 }
