--- a/_locales/zh_HK/messages.json
+++ b/_locales/zh_HK/messages.json
@@ -171,7 +171,7 @@
     "message": "對話框"
   },
   "kvzmxp": {
-    "message": "使用鍵盤 Enter 鍵換行"
+    "message": "鍵盤 Enter 鍵換行"
   },
   "kpxvmz": {
     "message": "複製公式"
@@ -319,6 +319,12 @@
   },
   "quoteReply": {
     "message": "追問"
+  },
+  "scrollToBottomTitle": {
+    "message": "返回底部"
+  },
+  "scrollToBottomHint": {
+    "message": "顯示返回底部的快捷按鈕，方便回到最新訊息"
   }
 }
 
