--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -325,5 +325,14 @@
   },
   "scrollToBottomHint": {
     "message": "नवीनतम संदेश पर जाने के लिए त्वरित बटन दिखाएं"
+  },
+  "pleaseWait": {
+    "message": "कृपया प्रतीक्षा करें, नोड ID लोड हो रहा है..."
+  },
+  "chatTimeLabelTitle": {
+    "message": "चैट समय दिखाएं"
+  },
+  "chatTimeLabelHint": {
+    "message": "प्रत्येक संदेश पर भेजने का समय दिखाएं। अक्षम होने पर भी समय रिकॉर्ड सहेजे जाते हैं"
   }
 }
