--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -325,6 +325,15 @@
   },
   "scrollToBottomHint": {
     "message": "Показать кнопку быстрого перехода к последнему сообщению"
+  },
+  "pleaseWait": {
+    "message": "Пожалуйста, подождите, загрузка ID узла..."
+  },
+  "chatTimeLabelTitle": {
+    "message": "Показать время чата"
+  },
+  "chatTimeLabelHint": {
+    "message": "Показывать время отправки для каждого сообщения. Записи времени сохраняются даже при отключении"
   }
 }
 
